<resources>
    <string name="app_name">health_log</string>
    <string name="id_or_email">아이디 또는 이메일</string>
    <string name="password">비밀번호</string>
    <string name="user">일반 회원</string>
    <string name="trainer">트레이너</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="find_id_password">아이디/비밀번호 찾기</string>
    <string name="enter_id_and_password">아이디와 비밀번호를 입력해주세요.</string>
    <string name="user_login_success">유저 로그인 성공!</string>
    <string name="trainer_login_success">트레이너 로그인 성공!</string>
    <string name="select_user_type">사용자 유형을 선택해주세요.</string>
</resources>